Add classifications route
